--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "lint:fix": "vue-cli-service lint --fix --ext .ts,.js,.jsx,.vue,.json ."
   },
   "dependencies": {
+    "axios": "^0.23.0",
     "core-js": "^3.6.5",
     "eslint-plugin-prettier": "^4.0.0",
     "vue": "^3.0.0",
@@ -36,7 +37,7 @@
     "@vue/eslint-config-prettier": "^6.0.0",
     "@vue/eslint-config-typescript": "^5.1.0",
     "@vue/test-utils": "^2.0.0-0",
-    "eslint": "^7.28.0",
+    "eslint": "^7.32.0",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-vue": "^7.15.2",
     "husky": "^5.2.0",
@@ -45,7 +46,7 @@
     "prettier": "^1.19.1",
     "sass-loader": "^8.0.2",
     "ts-node": "^9.1.1",
-    "typescript": "~3.9.10",
+    "typescript": "^4.3.5",
     "vue-jest": "^5.0.0-0"
   }
 }
